--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,11 @@
 pipeline {
 	agent { docker { image 'golang' } }
+
+	environment {
+		APP_DEBUG   = 'true'
+		DB_ENGINE   = 'mysql'
+	}
+	
 	stages {
 		stage('install') {
 			steps {
@@ -8,22 +14,23 @@ pipeline {
 			}
 		}
 	}
-}
-post {
-	always {
-		echo 'This will always run'
-	}
-	success {
-		echo 'This will run only if successful'
-	}
-	failure {
-		echo 'This will run only if failed'
-	}
-	unstable {
-		echo 'This will run only if the run was marked as unstable'
-	}
-	changed {
-		echo 'This will run only if the state of the Pipeline has changed'
-		echo 'For example, if the Pipeline was previously failing but is now successful'
+
+	post {
+		always {
+			echo 'This will always run'
+		}
+		success {
+			echo 'This will run only if successful'
+		}
+		failure {
+			echo 'This will run only if failed'
+		}
+		unstable {
+			echo 'This will run only if the run was marked as unstable'
+		}
+		changed {
+			echo 'This will run only if the state of the Pipeline has changed'
+			echo 'For example, if the Pipeline was previously failing but is now successful'
+		}
 	}
 }
