--- a/JenkinsFile
+++ b/JenkinsFile
@@ -39,7 +39,7 @@ pipeline {
 		stage('dep') {
 			steps {
 				sh 'echo "Running dep : "'
-				sh 'dep ensure -update'
+				sh '$GOBIN/dep ensure -update'
 			}
 		}
 		stage('tests') {
