--- a/JenkinsFile
+++ b/JenkinsFile
@@ -55,6 +55,7 @@ pipeline {
 			echo 'This will always run'
 		}
 		success {
+			sh 'echo "SUCCESS"'
 			echo 'This will run only if successful'
 		}
 		failure {
